More PDF versions

--- a/vignettes/OxfordPlots.Rmd
+++ b/vignettes/OxfordPlots.Rmd
@@ -113,7 +113,7 @@ makeOxfordPlots(coa$Oki_Osa, diag = FALSE, col = "strand") + theme_bw() + theme(
 
 10-Mb square window plot.
 
-```{r Oki_Osa_win, dev='svg', fig.ext='svg'}
+```{r Oki_Osa_win, dev=c('png', 'svg', 'pdf'), fig.ext=c('png', 'svg', 'pdf')}
 mkOxPlotWindow(gbs$Oki_Osa)
 ```
 
@@ -133,7 +133,7 @@ mkOxPlotWindow(gbs$Osa_Bar)
 makeOxfordPlots(coa$Osa_Oki, diag = FALSE)
 ```
 
-```{r Osa_Oki_win, dev='svg', fig.ext='svg'}
+```{r Osa_Oki_win, dev=c('png', 'svg', 'pdf'), fig.ext=c('png', 'svg', 'pdf')}
 mkOxPlotWindow(gbs$Osa_Oki)
 ```
 
@@ -180,7 +180,7 @@ seqlevels(Osa_Aom_PAR$query) <- seqlevels(Osa_Aom_PAR$query)[orderQuerySeqLevels
 Osa_Aom_PAR$query <- mergeSeqLevels(Osa_Aom_PAR$query, seqlevels(Osa_Aom_PAR$query), "PAR")
 ```
 
-```{r Osa_Aom_win, dev='svg', fig.ext='svg'}
+```{r Osa_Aom_win, dev=c('png', 'svg', 'pdf'), fig.ext=c('png', 'svg', 'pdf')}
 mkOxPlotWindow(Osa_Aom_PAR)
 ```
 
