--- a/vignettes/ChromosomePlots.Rmd
+++ b/vignettes/ChromosomePlots.Rmd
@@ -95,7 +95,7 @@ metaPerWindow <- function(genomeWindows, meta, meta_prefix=NULL) {
       if(length(levels(data)) > 1) {
         binned_list_of_tables <- binApply(table,  genomeWindows, data, idx)
         binned_DataFrame <- do.call(rbind, binned_list_of_tables) |> DataFrame()
-        colnames(binned_DataFrame) <- paste0(meta_prefix, colnames(binned_DataFrame), ".count.total")
+        colnames(binned_DataFrame) <- paste0(meta_prefix, name, ".", colnames(binned_DataFrame), ".count.total")
         mcols(genomeWindows) <- cbind(mcols(genomeWindows), binned_DataFrame)
       }
     }
@@ -189,9 +189,7 @@ We can use the `[mcol].counts.tables` metadata columns to calculate statistics b
 
 ```{r chromosome_plots_2, dependson="chromosome_plot_helper_fxns", fig.height=6, fig.width=12, message=FALSE, warning=FALSE, dev=c("svg", "png")}
 repeat_dist <- SimpleList()
-repeat_dist$Oki <- as.data.frame(chrw$Oki) |> as_tibble() |> group_by(seqnames, Arm) |> summarize(repeats.Class.count.table)
 
-# Now, do something...
 
 ```
 # Session information
