Pkgdown syntax correction.

--- a/vignettes/DistanceMeasures.Rmd
+++ b/vignettes/DistanceMeasures.Rmd
@@ -82,7 +82,7 @@ BiocParallel::bplapply(gbs, \(g) swap(g) |> GOC()) |> pairs2Kable6x3()
 
 # Strand randomisation index
 
-See `?GenomicBreaks::strand_randomisation_index()` for details.
+See `?GenomicBreaks::strand_randomisation_index` for details.
 
 ```{r strand_randomisation_index}
 BiocParallel::bplapply(gbs,                 strand_randomisation_index  ) |> pairs2Kable6x3()
