--- a/vignettes/RegionWidths.Rmd
+++ b/vignettes/RegionWidths.Rmd
@@ -100,11 +100,14 @@ This is useful to verify by eye that collections of distributions in the same
 distance group resemble each other.
 
 ```{r width_after_processing_steps, dependson="pre_compute_widths_object", fig.width=12, fig.height=8}
-gg_freq_poly <- function(tibble) {
+gg_freq_poly <- function(tibble, binwidth = 30, scale = "log") {
+  p <-
     ggplot(tibble) +
     aes(width) +
-    geom_freqpoly() +
-    scale_x_log10()
+    geom_freqpoly(binwidth = binwidth)
+  if(scale == "log")
+    p <- p + scale_x_log10()
+  p
 }
 
 w_df <- rbind(widths$gbs     |> as.data.frame()|> dplyr::mutate(what = "aligned"),
@@ -637,33 +640,33 @@ p_map <- gg_freq_poly(widths$coa |> dplyr::filter(! is.na(genus))) +
 ## "isolated", "unmapped", "colinear regions", "bridge" and "colinear alingments"
 
 ```{r compound2, fig.width=20, fig.height=4, dev=c("svg", "pdf", "png"), fig.ext=c("svg", "pdf", "png")}
-p_ali2 <- gg_freq_poly(widths$gbs |> dplyr::filter(dist == "Oki – North", nonCoa)) +
+p_ali2 <- gg_freq_poly(widths$gbs |> dplyr::filter(dist == "Oki – North", nonCoa), binwidth = 60, scale = "natural") +
   aes(width, after_stat(density), col=name) + theme_bw() +
-  scale_x_log10(limits = c(1,5e5)) +
+  scale_x_continuous(limits = c(0, 3e3)) +
   ggtitle("Isolated alignments")
 
-p_unmap2 <- gg_freq_poly(widths$unmap |> dplyr::filter(dist == "Oki – North")) +
+p_unmap2 <- gg_freq_poly(widths$unmap |> dplyr::filter(dist == "Oki – North"), binwidth = 60, scale = "natural") +
   aes(width, after_stat(density), col=name) + theme_bw() +
-  scale_x_log10(limits = c(1,5e5)) +
+  scale_x_continuous(limits = c(0, 3e3)) +
   ggtitle("Unmapped")
 
-p_syn2 <- gg_freq_poly(widths$coa |> dplyr::filter(dist == "Oki – North", !nonCoa)) +
+p_syn2 <- gg_freq_poly(widths$coa |> dplyr::filter(dist == "Oki – North", !nonCoa), binwidth = 600, scale = "natural") +
   aes(width, after_stat(density), col=name) + theme_bw() +
-  scale_x_log10(limits = c(1,5e5)) +
+  scale_x_continuous(limits = c(0, 3e4)) +
   ggtitle("Colinear region")
 
-p_map2 <- gg_freq_poly(widths$gbs |> dplyr::filter(dist == "Oki – North", !nonCoa)) +
+p_map2 <- gg_freq_poly(widths$gbs |> dplyr::filter(dist == "Oki – North", !nonCoa), binwidth = 60, scale = "natural") +
   aes(width, after_stat(density), col=name) + theme_bw() +
-  scale_x_log10(limits = c(1,5e5)) +
+  scale_x_continuous(limits = c(0, 3e3)) +
   ggtitle("Colinear alignment")
 
-p_bridge <- gg_freq_poly(widths$bri |> dplyr::filter(dist == "Oki – North")) +
+p_bridge <- gg_freq_poly(widths$bri |> dplyr::filter(dist == "Oki – North"), binwidth = 20, scale = "natural") +
   aes(width, after_stat(density), col=name) + theme_bw() +
-  scale_x_log10(limits = c(1,5e5)) +
+  scale_x_continuous(limits = c(0, 3e3)) +
   ggtitle("Bridge")
 
 # Patchwork
-(p_ali2 | p_unmap2 | p_syn2 | p_bridge | p_map2 ) + plot_layout(ncol = 5, guides = 'collect') + theme_bw()
+(p_ali2 | p_unmap2 | p_map2 | p_bridge | p_syn2 ) + plot_layout(ncol = 5, guides = 'collect') + theme_bw()
 ```
 
 
