Really add back panels and re-sort them.

--- a/vignettes/GenomicFeatures.Rmd
+++ b/vignettes/GenomicFeatures.Rmd
@@ -339,8 +339,8 @@ hmList_to_plot <- computePlotData("Oki", "Osa", ces$ce__50__48$Oki_Osa, tfbs, op
   hmList_to_plot$aln_nonCoa  |> prepareGGFreqPlot("01_isolated_alns"),
   hmList_to_plot$unmap       |> prepareGGFreqPlot("02_unmapped"),
   hmList_to_plot$syn_block   |> prepareGGFreqPlot("03_colinear_reg"),
-  hmList_to_plot$bri         |> prepareGGFreqPlot("04_bridge")#,
-#  hmList_to_plot$aln_coa     |> prepareGGFreqPlot("05_colinear_alns")
+  hmList_to_plot$bri         |> prepareGGFreqPlot("04_bridge"),
+  hmList_to_plot$aln_coa     |> prepareGGFreqPlot("05_colinear_alns")
 
 )|> ggplot() +
   aes(pos, freq, col = what) +
@@ -407,9 +407,9 @@ hmList_to_plot.centered <- computePlotData("Oki", "Osa", ces$ce__50__48$Oki_Osa,
 (p_boundary <- rbind(
   hmList_to_plot.centered$aln_nonCoa  |> prepareGGFreqPlot("01_isolated_alns"),
   hmList_to_plot.centered$unmap       |> prepareGGFreqPlot("02_unmapped"),
-  hmList_to_plot.centered$syn_block   |> prepareGGFreqPlot("05_colinear_reg"),
+  hmList_to_plot.centered$syn_block   |> prepareGGFreqPlot("03_colinear_reg"),
   hmList_to_plot.centered$bri         |> prepareGGFreqPlot("04_bridge"),
-  hmList_to_plot.centered$aln_coa     |> prepareGGFreqPlot("03_colinear_alns")
+  hmList_to_plot.centered$aln_coa     |> prepareGGFreqPlot("05_colinear_alns")
 
 )|> ggplot() +
   aes(pos, freq, col = what) +
