--- a/vignettes/RegionWidths.Rmd
+++ b/vignettes/RegionWidths.Rmd
@@ -666,7 +666,7 @@ p_bridge <- gg_freq_poly(widths$bri |> dplyr::filter(dist == "Oki – North"), b
   ggtitle("Bridge")
 
 # Patchwork
-(p_ali2 | p_unmap2 | p_map2 | p_bridge | p_syn2 ) + plot_layout(ncol = 5, guides = 'collect') + theme_bw()
+(p_ali2 | p_unmap2 | p_syn2 | p_bridge | p_map2 ) + plot_layout(ncol = 5, guides = 'collect') + theme_bw()
 ```
 
 
